--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -636,6 +636,7 @@
 }
 .reviews__card__text-collapsed {
   display: -webkit-box;
+  line-clamp: 4;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
